# Fractals-Rossler

./: .gitignore  main.py  pyproject.toml  python.txt  requirements.txt
fractal_rossler/: grahamsmith_orthogonalization.py  rossler_system.py  solver.py
