[tool.poetry]
name = "fractal-rossler"
version = "0.1.0"
description = ""
authors = ["daregoodness1997 <daregoodness@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.1.1"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
